# phd-experiments

./: .gitignore  .gitmodules  905185.cobaltlog  CMakeLists.txt  RUN.py  compile.sh  gpt_main.cpp  main.cpp  run-advection-manual.py  run-benchmark.sh  run-cuda-ldg.py  run-hybrid.py  utils.hpp  zzz_prompt
